tests/compile/shader_modules/compute_combinator.gcc.stderr
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/compute_combinator.cpp:1:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >]':
tests/compile/shader_modules/compute_combinator.cpp:24:4:   required from here
   21 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   22 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   23 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   24 |         } (vs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
include/meta/combinators.hpp:175:31: note: 'is_compute' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::ComputeCombinator::operator()(ComputeShader&) const [with ComputeShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >]':
tests/compile/shader_modules/compute_combinator.cpp:35:4:   required from here
   32 |         auto pipeline = ComputeCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~
   33 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   34 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   35 |         } (fs);
      |         ~~^~~~
include/meta/combinators.hpp:175:31: error: static assertion failed: compute combinator: arg@0 is not a compute shader
  175 |                 static_assert(is_compute, "compute combinator: arg@0 is not a compute shader");
      |                               ^~~~~~~~~~
include/meta/combinators.hpp:175:31: note: 'is_compute' evaluates to false
